--- a/package.json
+++ b/package.json
@@ -2,21 +2,15 @@
   "name": "rune-app",
   "version": "0.0.1",
   "description": "Runes",
+  "devDependencies": {
+    "webpack": "^1.12.9"
+  },
   "dependencies": {
-    "co-body": "^1.0.0",
-    "koa": "^0.12.2",
-    "koa-basic-auth": "^1.1.2",
-    "koa-logger": "^1.2.2",
-    "koa-router": "^3.4.0",
-    "koa-static": "^1.4.7",
-    "swig": "^1.4.2"
+    "babel-core": "^6.3.13",
+    "babel-loader": "^6.2.0",
+    "falcor": "^0.1.14",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3"
   },
-  "engines": {
-    "node": "0.11.14"
-  },
-  "keywords": [
-    "node",
-    "koa"
-  ],
   "license": "MIT"
 }
