--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-core": "^6.3.13",
     "babel-loader": "^6.2.0",
     "falcor": "^0.1.14",
+    "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3"
   },
