--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "rune-app",
   "version": "0.0.1",
   "description": "Runes",
+  "scripts": {
+    "start": "node server.js"  
+  },
   "devDependencies": {
     "webpack": "^1.12.9"
   },
   "dependencies": {
     "babel-core": "^6.3.13",
     "babel-loader": "^6.2.0",
+    "express": "^4.13.3",
     "falcor": "^0.1.14",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
