--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "version": "0.0.1",
   "description": "Runes",
   "scripts": {
-    "start": "node server.js"  
+    "start": "node server.js"
   },
   "devDependencies": {
-    "webpack": "^1.12.9"
+    "webpack": "^1.12.9",
+    "babel-core": "^6.3.13",
+    "babel-loader": "^6.2.0"
   },
   "dependencies": {
-    "babel-core": "^6.3.13",
-    "babel-loader": "^6.2.0",
     "express": "^4.13.3",
-    "falcor": "^0.1.14",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3"
