--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.13.3",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react-dom": "^0.14.3",
+    "superagent": "^1.5.0"
   },
   "license": "MIT"
 }
