--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "babel-loader": "^6.2.0"
   },
   "dependencies": {
+    "axios": "^0.7.0",
+    "bluebird": "^3.0.6",
     "express": "^4.13.3",
     "lodash": "^3.10.1",
+    "q": "^1.4.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "superagent": "^1.5.0"
