--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "node server.js"
   },
   "devDependencies": {
-    "webpack": "^1.12.9",
     "babel-core": "^6.3.13",
-    "babel-loader": "^6.2.0"
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "webpack": "^1.12.9"
   },
   "dependencies": {
     "axios": "^0.7.0",
