--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "chai": "^3.4.1",
     "webpack": "^1.12.9"
   },
   "dependencies": {
