--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "description": "Runes",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "node test/test.js"
   },
   "devDependencies": {
     "babel-core": "^6.3.13",
@@ -11,6 +12,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "chai": "^3.4.1",
+    "tape": "^4.4.0",
     "webpack": "^1.12.9"
   },
   "dependencies": {
